examples/test/testpolicy15264.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15264
  namespace: namespace384
spec:
  podSelector:
    matchLabels:
      key10: value29
      key2: value7
      key36: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value48
          key4: value19
      podSelector:
        matchLabels:
          key8: value18
          key47: value5
